Add installation instructions and poetry

--- a/qa-llamaindex-gpt4all.ipynb
+++ b/qa-llamaindex-gpt4all.ipynb
@@ -26,10 +26,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "68224818",
+   "metadata": {},
+   "source": [
+    "# Prerequisite\n",
+    "\n",
+    "- Python 3.11.3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "56ee03f2-db09-43e0-82d0-4033f39fabde",
    "metadata": {},
    "source": [
-    "# Set up"
+    "# Set up\n",
+    "\n",
+    "Please ensure that you've installed Python 3.11.3 and created a virtual environment.\n",
+    "\n",
+    "After that, you can either use run the following cell or follow the environment section in README.md file to install package dependencies."
    ]
   },
   {
@@ -349,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9bcbc1bb-51f2-4740-98c0-24986e88d3da",
    "metadata": {},
    "outputs": [
@@ -357,36 +371,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2024-02-28 09:57:30--  https://gpt4all.io/models/gguf/mistral-7b-openorca.Q4_0.gguf\n",
-      "Resolving gpt4all.io (gpt4all.io)... 104.26.0.159, 104.26.1.159, 172.67.71.169\n",
-      "Connecting to gpt4all.io (gpt4all.io)|104.26.0.159|:443... connected.\n",
+      "--2024-03-28 20:52:07--  https://gpt4all.io/models/gguf/mistral-7b-openorca.Q4_0.gguf\n",
+      "Resolving gpt4all.io (gpt4all.io)... 104.26.1.159, 172.67.71.169, 104.26.0.159\n",
+      "Connecting to gpt4all.io (gpt4all.io)|104.26.1.159|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 4108927744 (3.8G)\n",
       "Saving to: ‘mistral-7b-openorca.Q4_0.gguf’\n",
       "\n",
-      "mistral-7b-openorca  93%[=================>  ]   3.60G  54.9MB/s    in 66s     \n",
+      "mistral-7b-openorca 100%[===================>]   3.83G  19.3MB/s    in 5m 56s  \n",
       "\n",
-      "2024-02-28 09:58:37 (56.0 MB/s) - Connection closed at byte 3861454848. Retrying.\n",
-      "\n",
-      "--2024-02-28 09:58:38--  (try: 2)  https://gpt4all.io/models/gguf/mistral-7b-openorca.Q4_0.gguf\n",
-      "Connecting to gpt4all.io (gpt4all.io)|104.26.0.159|:443... connected.\n",
-      "HTTP request sent, awaiting response... 206 Partial Content\n",
-      "Length: 4108927744 (3.8G), 247472896 (236M) remaining\n",
-      "Saving to: ‘mistral-7b-openorca.Q4_0.gguf’\n",
-      "\n",
-      "mistral-7b-openorca  94%[++++++++++++++++++  ]   3.63G  95.4KB/s    in 4m 10s  \n",
-      "\n",
-      "2024-02-28 10:02:51 (137 KB/s) - Connection closed at byte 3896442880. Retrying.\n",
-      "\n",
-      "--2024-02-28 10:02:53--  (try: 3)  https://gpt4all.io/models/gguf/mistral-7b-openorca.Q4_0.gguf\n",
-      "Connecting to gpt4all.io (gpt4all.io)|104.26.0.159|:443... connected.\n",
-      "HTTP request sent, awaiting response... 206 Partial Content\n",
-      "Length: 4108927744 (3.8G), 212484864 (203M) remaining\n",
-      "Saving to: ‘mistral-7b-openorca.Q4_0.gguf’\n",
-      "\n",
-      "mistral-7b-openorca 100%[++++++++++++++++++=>]   3.83G  22.7MB/s    in 10s     \n",
-      "\n",
-      "2024-02-28 10:03:05 (19.6 MB/s) - ‘mistral-7b-openorca.Q4_0.gguf’ saved [4108927744/4108927744]\n",
+      "2024-03-28 20:58:06 (11.0 MB/s) - ‘mistral-7b-openorca.Q4_0.gguf’ saved [4108927744/4108927744]\n",
       "\n"
      ]
     }
@@ -398,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ced79b99-f624-4275-90c2-afeb9e0c5762",
    "metadata": {},
    "outputs": [
@@ -437,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "fd5944a8-28c5-4e0f-90e7-18b83a5c1d53",
    "metadata": {},
    "outputs": [
@@ -445,7 +439,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ./data.txt\n"
+      "Writing ./data.txt\n"
      ]
     }
    ],
@@ -473,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f4eb6d08-3e6e-4d88-81ee-10fa250bfbfb",
    "metadata": {},
    "outputs": [
@@ -481,7 +475,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/bcp/notebooks/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/Users/bcp/git/notebooks/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -516,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "e4725844-a18e-49b7-9be4-ecda43f14c5d",
    "metadata": {},
    "outputs": [],
@@ -526,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "e7fb6893-9ede-4a57-b3c0-7b574472e101",
    "metadata": {},
    "outputs": [],
@@ -547,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "88cf1e8c-20e8-436d-80fe-64fcbddfb7a5",
    "metadata": {},
    "outputs": [],
@@ -567,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "ccfbc854-aa0a-472c-806f-daa983dc52c4",
    "metadata": {},
    "outputs": [
@@ -575,7 +569,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/bcp/notebooks/.venv/lib/python3.11/site-packages/langchain_core/_api/deprecation.py:117: LangChainDeprecationWarning: The function `predict` was deprecated in LangChain 0.1.7 and will be removed in 0.2.0. Use invoke instead.\n",
+      "/Users/bcp/git/notebooks/.venv/lib/python3.11/site-packages/langchain_core/_api/deprecation.py:117: LangChainDeprecationWarning: The function `predict` was deprecated in LangChain 0.1.7 and will be removed in 0.2.0. Use invoke instead.\n",
       "  warn_deprecated(\n"
      ]
     },
@@ -600,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "d82cea7d-4a71-4de3-b968-f93661440b29",
    "metadata": {},
    "outputs": [
@@ -619,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "2e73b78a-6dcc-42f6-9ab4-56bd1b9ab76a",
    "metadata": {},
    "outputs": [
@@ -650,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "646594e9-491f-43e4-a230-104ace7f447f",
    "metadata": {},
    "outputs": [
@@ -679,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "fe35268b-40bb-4717-ba16-cb3f1c6ecf2d",
    "metadata": {},
    "outputs": [],
@@ -698,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "74539139-e53e-40ad-a62d-b57f70c05072",
    "metadata": {},
    "outputs": [
